Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           <h1>
 <a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h1>
 
+<p><a href="http://imgur.com/zoeg3NS.png"><img src="http://imgur.com/zoeg3NS.png" alt="BeardedSpice"></a></p>
+
 <p>BeardedSpice is a menubar application for Mac OSX that allows you to control web based media players with the media keys found on Mac keyboards. It is an extensible application that works with Chrome and Safari, and can control any tab with an applicable media player. BeardedSpice currently supports:</p>
 
 <ul>
@@ -49,14 +51,12 @@
 <li>Rdio</li>
 </ul><p>If you want another supported app supported, simply open an issue with the tag 'app support'. Or, if you are feeling extra feisty, implement the handler yourself!</p>
 
-<p>BeardedSpice is built with <a href="https://github.com/nevyn/SPMediaKeyTap">SPMediaKeyTap</a> and works well with other applications listening to media key events.</p>
-
-<p><a href="http://imgur.com/zoeg3NS.png"><img src="http://imgur.com/zoeg3NS.png" alt="BeardedSpice"></a></p>
+<p>BeardedSpice is built with <a href="https://github.com/nevyn/SPMediaKeyTap">SPMediaKeyTap</a> and works well with other applications listening to media key events. <strong>NOTE</strong>: We've asked nevyn to update the SPMediaKeyTap whitelist. While BeardedSpice is not on the whitelist, media key events may not propogate to BeardedSpice. You'll need to keep your Spotify application closed in the meantime.</p>
 
 <h2>
-<a name="downloading" class="anchor" href="#downloading"><span class="octicon octicon-link"></span></a>Downloading</h2>
+<a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h2>
 
-<p>Find all released binaries <a href="https://github.com/beardedspice/beardedspice/tree/releases">here</a>.</p>
+<p>Download the <a href="https://github.com/beardedspice/beardedspice/raw/releases/BeardedSpice-0.1.0.dmg">latest release</a>, or find all released binaries <a href="https://github.com/beardedspice/beardedspice/tree/releases">here</a>.</p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
