--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Beardedspice by beardedspice</title>
+    <title>BeardedSpice</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Beardedspice</h1>
+          <h1>BeardedSpice</h1>
           <h2>Mac Media Keys for the Masses</h2>
         </header>
 
