Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>BeardedSpice</title>
+    <title>Beardedspice by beardedspice</title>
   </head>
 
   <body>
@@ -18,11 +18,13 @@
       <div class="inner">
 
         <header>
-          <h1>BeardedSpice</h1>
+          <h1>Beardedspice</h1>
           <h2>Mac Media Keys for the Masses</h2>
         </header>
 
         <section id="downloads" class="clearfix">
+          <a href="https://github.com/beardedspice/beardedspice/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/beardedspice/beardedspice/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/beardedspice/beardedspice" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
@@ -63,6 +65,8 @@
 <a name="setting-an-active-tab" class="anchor" href="#setting-an-active-tab"><span class="octicon octicon-link"></span></a>Setting an active tab</h3>
 
 <p>Tell BeardedSpice to control a tab by either clicking the menubar icon and selecting a tab from the dropdown, or by pressing the 'Set Active Tab' shortcut when a browser window is active. The shortcut defaults to ⌘+F8, and is configurable in the preferences panel. Switching active tabs will pause the currently active tab (if there is one).</p>
+
+<p>In Chrome you must reset your active tab if you move your tab to a new window. With Safari, reset your active tab when changing the order of your active tab or moving it to a new window.</p>
 
 <h3>
 <a name="disabling-certain-handlers" class="anchor" href="#disabling-certain-handlers"><span class="octicon octicon-link"></span></a>Disabling certain handlers</h3>
