--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Beardedspice by beardedspice</title>
+    <title>BeardedSpice</title>
   </head>
 
   <body>
@@ -18,13 +18,11 @@
       <div class="inner">
 
         <header>
-          <h1>Beardedspice</h1>
+          <h1>BeardedSpice</h1>
           <h2>Mac Media Keys for the Masses</h2>
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/beardedspice/beardedspice/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/beardedspice/beardedspice/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/beardedspice/beardedspice" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
