--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>BeardedSpice</title>
+    <title>Beardedspice by beardedspice</title>
   </head>
 
   <body>
@@ -18,11 +18,13 @@
       <div class="inner">
 
         <header>
-          <h1>BeardedSpice</h1>
+          <h1>Beardedspice</h1>
           <h2>Mac Media Keys for the Masses</h2>
         </header>
 
         <section id="downloads" class="clearfix">
+          <a href="https://github.com/beardedspice/beardedspice/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/beardedspice/beardedspice/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/beardedspice/beardedspice" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
@@ -152,6 +154,14 @@
 </pre></div>
 
 <p>Finally, update the <a href="https://github.com/beardedspice/beardedspice/blob/master/BeardedSpice/BeardedSpiceUserDefaults.plist">default preferences plist</a> to include your strategy.</p>
+
+<h2>
+<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
+
+<ul>
+<li><a href="https://twitter.com/chedkid">@chedkid</a></li>
+<li><a href="https://twitter.com/_trhodes_">@_trhodes_</a></li>
+</ul>
         </section>
 
         <footer>
