Update index w/ current strategies

--- a/index.html
+++ b/index.html
@@ -44,16 +44,24 @@
 <p>BeardedSpice is a menubar application for Mac OSX that allows you to control web based media players with the media keys found on Mac keyboards. It is an extensible application that works with Chrome and Safari, and can control any tab with an applicable media player. BeardedSpice currently supports:</p>
 
 <ul>
-<li>YouTube</li>
-<li>HypeMachine</li>
-<li>Spotify (Web)</li>
-<li>Pandora</li>
-<li>BandCamp</li>
-<li>GrooveShark</li>
-<li>SoundCloud</li>
-<li>Last.fm</li>
-<li>Google Music</li>
-<li>Rdio</li>
+<li><a href="http://8tracks.com">8Tracks</a></li>
+<li><a href="http://bandcamp.com">BandCamp</a></li>
+<li><a href="http://listen.beatsmusic.com">BeatsMusic</a></li>
+<li><a href="https://play.google.com/music/">Google Music</a></li>
+<li><a href="http://grooveshark.com">GrooveShark</a></li>
+<li><a href="http://hypem.com">HypeMachine</a></li>
+<li><a href="http://last.fm">Last.fm</a></li>
+<li><a href="http://mixcloud.com">Mixcloud</a></li>
+<li><a href="https://music.sonyentertainmentnetwork.com">Music Unlimited </a></li>
+<li><a href="http://pandora.com">Pandora</a></li>
+<li><a href="http://rdio.com">Rdio</a></li>
+<li><a href="http://shuffler.fm/tracks">Shuffler.fm</a></li>
+<li><a href="http://slacker.com">Slacker</a></li>
+<li><a href="http://songza.com">Songza</a></li>
+<li><a href="https://soundcloud.com">SoundCloud</a></li>
+<li><a href="https://play.spotify.com">Spotify (Web)</a></li>
+<li><a href="http://synology.com">Synology</a></li>
+<li><a href="http://youtube.com">YouTube</a></li>
 </ul><p>If you want another supported app supported, simply open an issue with the tag 'app support'. Or, if you are feeling extra feisty, implement the handler yourself!</p>
 
 <p>BeardedSpice is built with <a href="https://github.com/nevyn/SPMediaKeyTap">SPMediaKeyTap</a> and works well with other applications listening to media key events. <strong>NOTE</strong>: We've asked nevyn to update the SPMediaKeyTap whitelist. While BeardedSpice is not on the whitelist, media key events may not propogate to BeardedSpice. You'll need to keep your Spotify application closed in the meantime.</p>
