--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8">
             <title>BeardedSpice updated!</title>
             <meta name="robots" content="anchors">
-                <base href="https://github.com/beardedspice/beardedspice/raw/distr">
+                <base href="https://github.com/beardedspice/beardedspice/raw/distr/publish">
                     
                     <link href="resources/beardedspice-rnotes.css" type="text/css" rel="stylesheet" media="all">
                         </head>
@@ -18,14 +18,11 @@
                 </td>
             </tr>
             <tr>
-                <td valign="top" width="150"><img src="resources/icon.png" alt="Adguard"  width="150" border="0"></td>
+                <td valign="top" width="150"><img src="resources/orgLogo150@2x.png" alt="BeardedSpice"  width="150" border="0"></td>
                 <td valign="top">
                     <ul>
-                        <li>Added license activation process indication.</li>
-<li>Now LAN traffic is not filtered by Adguard.</li>
-<li>List of requests is now cleared upon closing Filtering Log.</li>
-<li>Fixed the problem with Adguard certificate import in Firefox for OS X 10.7.</li>
-<li>Fixed the error leading to built-in firewall message pop-up.</li>
+                        <li>First Release.</li>
+<li>Бвги пофиксены, фичи импрувлены.</li>
                     <ul>
                 </td>
             </tr>
