--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -22,7 +22,7 @@
                 <td valign="top">
                     <ul>
                         <li>First Release.</li>
-<li>Бвги пофиксены, фичи импрувлены.</li>
+<li>Бaги пофиксены, фичи импрувлены.</li>
                     <ul>
                 </td>
             </tr>
