test update system

--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -21,7 +21,7 @@
                 <td valign="top" width="150"><img src="resources/orgLogo150@2x.png" alt="BeardedSpice"  width="150" border="0"></td>
                 <td valign="top">
                     <ul>
-                        <li>First Release.</li>
+                        <li>Test Update System Release.</li>
 <li>Бaги пофиксены, фичи импрувлены.</li>
                     <ul>
                 </td>
