--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8">
             <title>BeardedSpice updated!</title>
             <meta name="robots" content="anchors">
-                <base href="https://github.com/beardedspice/beardedspice/raw/distr/publish">
+                <base href="https://raw.github.com/beardedspice/beardedspice/distr/publish">
                     
                     <link href="resources/beardedspice-rnotes.css" type="text/css" rel="stylesheet" media="all">
                         </head>
