changed html format of the release notes

--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -13,12 +13,11 @@
         <br />
         <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
             <tr>
-                <td class="gray" colspan="2">
+                <td class="gray">
                     <h3>1.0</h3>
                 </td>
             </tr>
             <tr>
-                <td valign="top" width="150"><img src="resources/orgLogo150@2x.png" alt="BeardedSpice"  width="150" border="0"></td>
                 <td valign="top">
                     <ul>
                         <li>Added other TLDs for Yandex Music.</li>
