--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -14,13 +14,13 @@
         <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
             <tr>
                 <td class="gray">
-                    <h3>1.0</h3>
+                    <h3>1.0.7</h3>
                 </td>
             </tr>
             <tr>
                 <td valign="top">
                     <ul>
-                        <li>Added other TLDs for Yandex Music.</li>
+                        <li>Updated Google Play Strategy.</li>
                     <ul>
                 </td>
             </tr>
