--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -14,13 +14,14 @@
         <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
             <tr>
                 <td class="gray">
-                    <h3>1.0.7</h3>
+                    <h3>1.0.8</h3>
                 </td>
             </tr>
             <tr>
                 <td valign="top">
                     <ul>
                         <li>Updated Google Play Strategy.</li>
+<li>Mac OS X 10.8 it is minimum system requirements now.</li>
                     <ul>
                 </td>
             </tr>
