--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -14,14 +14,14 @@
         <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
             <tr>
                 <td class="gray">
-                    <h3>1.0.8</h3>
+                    <h3>1.1</h3>
                 </td>
             </tr>
             <tr>
                 <td valign="top">
                     <ul>
-                        <li>Updated Google Play Strategy.</li>
-<li>Mac OS X 10.8 it is minimum system requirements now.</li>
+                        <li>Many additions and improvements.</li>
+<li>Check list of the closed issues and requests <a href="https://github.com/beardedspice/beardedspice/issues?q=milestone%3A1.1+is%3Aclosed">here</a>.</li>
                     <ul>
                 </td>
             </tr>
