--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -12,19 +12,31 @@
     <body>
         <br />
         <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
-            <tr>
-                <td class="gray">
-                    <h3>1.1.1</h3>
-                </td>
-            </tr>
-            <tr>
-                <td valign="top">
-                    <ul>
-                        <li>Many additions and improvements.</li>
-<li>Check list of the closed issues and requests <a href="https://github.com/beardedspice/beardedspice/issues?q=milestone%3A1.1+is%3Aclosed">here</a>.</li>
-                    <ul>
-                </td>
-            </tr>
+
+<tr>
+<td class=gray>
+<h3>1.1.1</h3>
+</td>
+</tr>
+<tr>
+<td valign=top>
+<ul>
+ <li>Fixed SoundCloud strategy.</li>
+<ul>
+</td>
+</tr>
+<tr>
+<td class="gray">
+<h3>1.1</h3>
+</td>
+</tr>
+<tr>
+<td valign="top">
+<ul>
+<li>Many additions and improvements.</li> <li>Check list of the closed issues and requests <a href="https://github.com/beardedspice/beardedspice/issues?q=milestone%3A1.1+is%3Aclosed">here</a>.</li>
+<ul>
+</td>
+</tr>
         </table>
         <br />
     </body>
