--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -15,6 +15,18 @@
 
 <tr>
 <td class=gray>
+<h3>1.1.2</h3>
+</td>
+</tr>
+<tr>
+<td valign=top>
+<ul>
+ <li>Fixed TIDAL strategy.</li>
+<ul>
+</td>
+</tr>
+<tr>
+<td class=gray>
 <h3>1.1.1</h3>
 </td>
 </tr>
