--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -15,6 +15,18 @@
 
 <tr>
 <td class=gray>
+<h3>1.2</h3>
+</td>
+</tr>
+<tr>
+<td valign=top>
+<ul>
+ <li>Many fixes and improvements.</li> <li>Check <a href=https://github.com/beardedspice/beardedspice/issues?q=milestone%3A1.2+is%3Aclosed>this list</a></li>
+<ul>
+</td>
+</tr>
+<tr>
+<td class=gray>
 <h3>1.1.2</h3>
 </td>
 </tr>
