--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -15,6 +15,18 @@
 
 <tr>
 <td class=gray>
+<h3>2.1.0</h3>
+</td>
+</tr>
+<tr>
+<td valign=top>
+<ul>
+ <li>Added app compatibility for Downcast, Beatport.</li> <li>A number of web strategies have been updated and are included by default.</li> <li>Increased the brightness of the BeardedSpice icon.</li> <li></li> <li>You can check list of changes <a href=https://github.com/beardedspice/beardedspice/milestone/10?closed=1>here</a>.</li>
+<ul>
+</td>
+</tr>
+<tr>
+<td class=gray>
 <h3>2.0.0</h3>
 </td>
 </tr>
@@ -110,26 +122,14 @@
 </td>
 </tr>
 <tr>
-<td class=gray>
-<h3>1.1.1</h3>
-</td>
-</tr>
-<tr>
-<td valign=top>
-<ul>
- <li>Fixed SoundCloud strategy.</li>
-<ul>
-</td>
-</tr>
-<tr>
 <td class="gray">
-<h3>1.1</h3>
+<h3>1.1.1</h3>
 </td>
 </tr>
 <tr>
 <td valign="top">
 <ul>
-<li>Many additions and improvements.</li> <li>Check list of the closed issues and requests <a href="https://github.com/beardedspice/beardedspice/issues?q=milestone%3A1.1+is%3Aclosed">here</a>.</li>
+ <li>Fixed SoundCloud strategy.</li>
 <ul>
 </td>
 </tr>
