--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -9,6 +9,15 @@
     <body>
         <br />
         <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+            <td>
+                <h3>2.1.2</h3>
+                <ul>
+                    <li>(<a href="https://github.com/beardedspice/beardedspice/commit/dc1bf015ddf02d4c0041e8ffc48a7c862b7aed79">dc1bf01</a>) Alex Evers - <code>Hotfix for Google Music (and others) being broken by conflicting variable names.</code></li>
+                    <li>(<a href="https://github.com/beardedspice/beardedspice/pull/534">#534</a>)  Anthony Whitaker - <code>Added favorite function to pandora (tied to thumbs up).</code></li>
+                </ul>
+            </td>
+        </tr>
             <tr>
                 <td>
                     <h3>2.1.1</h3>
