--- a/publish/beardedspice-rnotes-en.html
+++ b/publish/beardedspice-rnotes-en.html
@@ -11,6 +11,16 @@
         <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
         <tr>
             <td>
+                <h3>2.2.1</h3>
+                <ul>
+                <li>(<a href="https://github.com/beardedspice/beardedspice/commit/f71719482fe2b6a373d35cbaee7c3b8e8a37bc1d">f717194
+                </a>) - <code>Fix for #516 - applescript query no longer returns title</code> (<a href="https://github.com/1ps0">@1ps0</a>)</li>
+                <li>(<a href="https://github.com/beardedspice/beardedspice/pull/600">#600</a>) - <code>ChromeTabAdapter: guard against element removal</code> (<a href="https://github.com/wmertens">@wmertens</a>)</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <h3>2.2.0</h3>
                 <ul>
                 <li>(<a href="https://github.com/beardedspice/beardedspice/pull/413">#413</a>) - <code>Added Safari Tech Preview.</code> (<a href="https://github.com/mermaid">@mermaid</a>)</li>
