--- a/BeardedSpice/ExtensionsResources/Base.lproj/pairing.html
+++ b/BeardedSpice/ExtensionsResources/Base.lproj/pairing.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Pairing with BeardedSpice Appl</title>
+        <title>Pairing with BeardedSpice App</title>
     </head>
     <body>
         <div id="message">BeardedSpice Extension is not installed.</div>
