--- a/BeardedSpice/ExtensionsResources/ru.lproj/pairing.html
+++ b/BeardedSpice/ExtensionsResources/ru.lproj/pairing.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>Pairing with BeardedSpice App</title>
+        <title>Сопряжение с приложением BeardedSpice</title>
     </head>
     <body>
-        <div id="message">BeardedSpice Extension is not installed.</div>
+        <div id="message">Расширение BeardedSpice не установлено.</div>
         <div style="display: none;" id="X_BeardedSpice_Browser_BundleId">${bundleId}</div>
     </body>
 </html>
